--- a/templates/app01/miniflux.yml
+++ b/templates/app01/miniflux.yml
@@ -38,10 +38,15 @@ services:
       traefik.http.services.rss.loadbalancer.server.port: 8080
       traefik.http.routers.rss.middlewares: authelia
       homepage.group: Apps
-      homepage.name: Miniflux
+      homepage.name: Feed reader
       homepage.icon: miniflux.png
       homepage.href: https://rss.{{ tertiary_domain }}/
-      homepage.description: Feed reader
+      homepage.siteMonitor: http://miniflux:8080
+      homepage.weight: 25
+      homepage.description: Miniflux
+      homepage.widget.type: miniflux
+      homepage.widget.url: http://miniflux:8080
+      homepage.widget.key: ${MINIFLUX_API_KEY}
 
   db:
     container_name: miniflux_db
