--- a/v3.yml
+++ b/v3.yml
@@ -52,12 +52,14 @@
     - pve_networking
     - geerlingguy.ntp
     - role: lae.proxmox
+      tags: proxmox
       vars:
         pve_reboot_on_kernel_update: false
         pve_zfs_enabled: true
         pve_zfs_options: |-
           options zfs zfs_arc_max=8589934592
           options zfs zfs_arc_min=2147483648
+        pve_zfs_zed_email: aven@{{ tertiary_domain }}
     - role: artis3n.tailscale
       tags: tailscale
       vars:
