--- a/templates/app01/changedetection.yml
+++ b/templates/app01/changedetection.yml
@@ -26,7 +26,7 @@ services:
         condition: service_started
 
     volumes:
-      - {{ app_root }}/changedetection:/datastore
+      - "{{ app_root }}/changedetection:/datastore"
 
     labels:
       traefik.enable: true
