--- a/templates/app01/home_automation.yml
+++ b/templates/app01/home_automation.yml
@@ -20,7 +20,7 @@ services:
       TZ: {{ timezone }}
 
     volumes:
-      - {{ app_root }}/home_assistant_neo:/config
+      - "{{ app_root }}/home_assistant:/config"
 
     # ports:
     #   - 1400:1400
@@ -32,9 +32,9 @@ services:
       traefik.http.routers.home.entrypoints: https
       traefik.http.routers.home.tls.certresolver: default
       traefik.http.services.home.loadbalancer.server.port: 8123
-      traefik.http.routers.home.middlewares: authelia
+#      traefik.http.routers.home.middlewares: authelia
       homepage.group: Apps
-      homepage.name: Home automation
+      homepage.name: Home management
       homepage.icon: home-assistant.png
       homepage.href: https://home.{{ tertiary_domain }}/
       homepage.weight: 5
@@ -44,6 +44,38 @@ services:
       homepage.widget.fields: '["lights_on"]'
       homepage.widget.url: http://home_assistant:8123
       homepage.widget.key: ${HOMEASSISTANT_API_KEY}
+  
+  node_red:
+    container_name: node_red
+    image: nodered/node-red
+    restart: unless-stopped
+    user: root
+
+    volumes:
+      - "{{ app_root }}/node-red:/data"
+      - /etc/localtime:/etc/localtime:ro
+
+    networks:
+      - web
+      - mqtt
+
+    environment:
+      TZ: "{{ timezone }}"
+
+    labels:
+      traefik.enable: true
+      traefik.http.routers.auto.rule: Host(`auto.{{ tertiary_domain }}`)
+      traefik.http.routers.auto.entrypoints: https
+      traefik.http.routers.auto.tls.certresolver: default
+      traefik.http.services.auto.loadbalancer.server.port: 1880
+      traefik.http.routers.auto.middlewares: authelia
+      homepage.group: Apps
+      homepage.name: Automation workflows
+      homepage.icon: node-red.png
+      homepage.href: https://auto.{{ tertiary_domain }}/
+      homepage.weight: 64
+      homepage.description: Node-RED
+      homepage.siteMonitor: http://node-red:1880
 
   mosquitto:
     container_name: mosquitto
@@ -54,7 +86,7 @@ services:
       - mqtt
 
     volumes:
-      - {{ app_root }}/mosquitto/mosquitto.conf:/mosquitto/config/mosquitto.conf
+      - "{{ app_root }}/mosquitto/mosquitto.conf:/mosquitto/config/mosquitto.conf"
 
     labels:
       - traefik.enable=false
@@ -67,7 +99,7 @@ services:
       - mosquitto
 
     volumes:
-      - {{ app_root }}/zigbee2mqtt:/app/data
+      - "{{ app_root }}/zigbee2mqtt:/app/data"
 
     devices:
       - /dev/ttyUSB0
