--- a/roles/syncoid_sanoid/tasks/main.yml
+++ b/roles/syncoid_sanoid/tasks/main.yml
@@ -5,32 +5,49 @@
     name:
       - sanoid
 
-- name: Create sanoid config dir
+- name: Create sanoid config dirs
   tags: config, sanoid
   file:
-    path: /etc/sanoid
+    path: /etc/sanoid/backup
     state: directory
     owner: root
     group: root
     mode: "0755"
 
-- name: Configure sanoid
+# Two sanoid configs:
+# - One run by cron constantly for prod
+# - One run nightly for backups (allowing the drive to sleep during the day)
+#   (backups are nocturnal, I guess)
+- name: Configure prod sanoid
   tags: config, sanoid
   copy:
-    src: "{{ inventory_hostname }}/sanoid.conf"
+    src: "{{ inventory_hostname }}/sanoid_prod.conf"
     dest: /etc/sanoid/sanoid.conf
     mode: "0644"
   notify: Restart sanoid
 
-- name: Add nvme replication cron job
-  tags: config, syncoid
-  ansible.builtin.cron:
-    name: Sync nvme/enc to hdd/enc
-    minute: "2"
-    hour: "2"
-    # No -f - obsolete datasets will need to be deleted on hdd manually,
-    # but I can't accidentally delete a dataset and lose it in both places.
-    job: /usr/sbin/syncoid -r --skip-parent --no-sync-snap nvme/enc hdd/enc
+- name: Configure backup sanoid
+  tags: config, sanoid
+  copy:
+    src: "{{ inventory_hostname }}/sanoid_backup.conf"
+    dest: /etc/sanoid/backup/sanoid.conf
+    mode: "0644"
+  notify: Restart sanoid
+
+# - name: Add SSD replication cron job
+#   tags: config, syncoid
+#   ansible.builtin.cron:
+#     name: Sync SSDs to hdd/enc
+#     minute: "2"
+#     hour: "2"
+#     # No -f - obsolete datasets will need to be deleted on hdd manually,
+#     # but I can't accidentally delete a dataset and lose it in both places.
+#     # Not using raw sends, so source and target datasets must be decrypted
+#     #
+#     # Future optimization: don't send freq/hourlies, bc they'll be pruned on the dest
+#     job: /usr/sbin/syncoid -r --no-sync-snap nvme/enc hdd/enc;
+#       /usr/sbin/syncoid -r --no-sync-snap rpool hdd/enc/rpool;
+#       /usr/sbin/sanoid --configdir /etc/sanoid/backup/
 
 # Disabled while I'm living that metered connections lyfe :(
 #
