Use Tailscale for NFS

--- a/host_vars/app01.yml
+++ b/host_vars/app01.yml
@@ -2,7 +2,7 @@
 
 # NFS directories mounted on file server
 nfs_dirs:
-  - server: lyra
+  - server: lyra.{{ tailscale_magic_dns }}
     path: "{{ app_root }}"
     user: root
     group: root
