Add Netdata, remove Guac, update Peertube & Immich

--- a/templates/web01/peertube.yml
+++ b/templates/web01/peertube.yml
@@ -7,7 +7,7 @@ networks:
 services:
   peertube:
     container_name: peertube
-    image: chocobozzz/peertube:production-bullseye
+    image: chocobozzz/peertube:production-bookworm
     restart: unless-stopped
     env_file:
       - peertube.env
