--- a/templates/cepheus/compose/home_automation.yml
+++ b/templates/cepheus/compose/home_automation.yml
@@ -1,5 +1,3 @@
-version: "3.7"
-
 networks:
   web:
   mqtt:
@@ -8,7 +6,7 @@ networks:
 services:
   home_assistant:
     container_name: home_assistant
-    image: homeassistant/home-assistant:latest
+    image: linuxserver/homeassistant:latest
     restart: unless-stopped
 
     networks:
@@ -17,6 +15,8 @@ services:
       - db
 
     environment:
+      PUID: 4010
+      PGID: 4010
       TZ: {{ timezone }}
 
     volumes:
@@ -49,10 +49,10 @@ services:
     container_name: node_red
     image: nodered/node-red
     restart: unless-stopped
-    user: root
+    user: 4010:4010
 
     volumes:
-      - "{{ app_root }}/node-red:/data"
+      - "{{ app_root }}/node_red:/data"
       - /etc/localtime:/etc/localtime:ro
 
     networks:
@@ -80,6 +80,7 @@ services:
   mosquitto:
     container_name: mosquitto
     image: eclipse-mosquitto
+    user: 4010:4010
     restart: unless-stopped
 
     networks:
@@ -94,6 +95,8 @@ services:
   zigbee2mqtt:
     container_name: zigbee2mqtt
     image: koenkk/zigbee2mqtt
+    user: 4010:4010
+    restart: unless-stopped
 
     depends_on:
       - mosquitto
@@ -102,7 +105,7 @@ services:
       - "{{ app_root }}/zigbee2mqtt:/app/data"
 
     devices:
-      - /dev/ttyUSB0
+      - /dev/zigbee_stick
 
     networks:
       - web
