--- a/templates/cepheus/compose/changedetection.yml
+++ b/templates/cepheus/compose/changedetection.yml
@@ -1,5 +1,3 @@
-version: "3.7"
-
 networks:
   web:
   changedetection:
@@ -7,7 +5,7 @@ networks:
 services:
   changedetection:
     container_name: changedetection
-    image: ghcr.io/dgtlmoon/changedetection.io
+    image: linuxserver/changedetection.io:latest
     restart: unless-stopped
 
     networks:
@@ -15,8 +13,10 @@ services:
       - changedetection
 
     environment:
+      PUID: 4004
+      PGID: 4004
       BASE_URL: https://change.{{ tertiary_domain }}/
-      USE_X_SETTINGS: 1
+      # USE_X_SETTINGS: 1
       # HIDE_REFERER: true
       # LOGGER_LEVEL: DEBUG
       PLAYWRIGHT_DRIVER_URL: ws://playwright-chrome:3000/?stealth=1
@@ -26,7 +26,7 @@ services:
         condition: service_started
 
     volumes:
-      - "{{ app_root }}/changedetection:/datastore"
+      - "{{ app_root }}/changedetection:/config"
 
     labels:
       traefik.enable: true
@@ -49,6 +49,7 @@ services:
   playwright-chrome:
     container_name: playwright-chrome
     image: browserless/chrome:1.60-chrome-stable
+    user: 4000:4004
     restart: unless-stopped
 
     networks:
