--- a/templates/cepheus/compose/cyberchef.yml
+++ b/templates/cepheus/compose/cyberchef.yml
@@ -1,5 +1,3 @@
-version: "3.7"
-
 networks:
   web:
   db:
@@ -8,6 +6,7 @@ services:
   cyberchef:
     container_name: cyberchef
     image: mpepping/cyberchef
+    user: 4000:4000
     restart: unless-stopped
 
     networks:
@@ -15,6 +14,9 @@ services:
 
     environment:
       TZ: {{ timezone }}
+
+    healthcheck:
+      start_interval: 5s
 
     labels:
       traefik.enable: true
