--- a/templates/cepheus/compose/git.yml
+++ b/templates/cepheus/compose/git.yml
@@ -1,5 +1,3 @@
-version: "3.7"
-
 networks:
   web:
   drone:
@@ -14,8 +12,8 @@ services:
       - web
 
     environment:
-      USER_UID: 1000
-      USER_GID: 1000
+      USER_UID: 4002
+      USER_GID: 4002
       GITEA__SERVER__ROOT_URL: https://git.{{ tertiary_domain }}
       GITEA__SERVICE__DISABLE_REGISTRATION: true
       GITEA__MIGRATIONS__ALLOW_LOCALNETWORKS: true
@@ -50,6 +48,7 @@ services:
     container_name: drone
     image: drone/drone:2
     restart: unless-stopped
+    user: 4002:4002
 
     networks:
       - web
