--- a/templates/cepheus/compose/homepage.yml
+++ b/templates/cepheus/compose/homepage.yml
@@ -1,5 +1,3 @@
-version: "3.7"
-
 networks:
   web:
   docker-socket:
@@ -8,6 +6,7 @@ services:
   homepage:
     container_name: homepage
     image: ghcr.io/gethomepage/homepage:latest
+
     restart: unless-stopped
 
     networks:
@@ -15,6 +14,8 @@ services:
       - docker-socket
 
     environment:
+      PUID: 4005
+      PGID: 4005
       LOG_LEVEL: debug
 
     volumes:
@@ -22,8 +23,7 @@ services:
       - "{{ app_root }}/homepage/icons:/app/public/icons"
 
     healthcheck:
-      interval: 4s
-      start_period: 30s
+      start_interval: 5s
 
     labels:
       traefik.enable: true
