--- a/templates/cepheus/compose/paperless-ngx.yml
+++ b/templates/cepheus/compose/paperless-ngx.yml
@@ -1,5 +1,3 @@
-version: "3.7"
-
 networks:
   web:
   paperless:
@@ -21,6 +19,8 @@ services:
 
     env_file: paperless.env
     environment:
+      USERMAP_UID: 4007
+      USERMAP_GID: 4007
       PAPERLESS_REDIS: redis://paperless_redis:6379
       PAPERLESS_TIKA_ENABLED: 1
       PAPERLESS_TIKA_GOTENBERG_ENDPOINT: http://gpaperless_gotenberg:3000
@@ -63,18 +63,17 @@ services:
   paperless_redis:
     container_name: paperless_redis
     image: docker.io/library/redis:7
+    user: 4007:4007
     restart: unless-stopped
 
     networks:
       - paperless
 
-    # volumes:
-    #   - redisdata:/data
-
 
   paperless_gotenberg:
     container_name: paperless_gotenberg
     image: docker.io/gotenberg/gotenberg:7.10
+    user: 4007:4007
     restart: unless-stopped
     command:
       - "gotenberg"
@@ -88,6 +87,7 @@ services:
   paperless_tika:
     container_name: paperless_tika
     image: ghcr.io/paperless-ngx/tika:latest
+    user: 4007:4007
     restart: unless-stopped
 
     networks:
