--- a/templates/cepheus/compose/traefik.yml
+++ b/templates/cepheus/compose/traefik.yml
@@ -49,7 +49,7 @@ services:
 
     labels:
       traefik.enable: true
-      traefik.http.routers.api.rule: Host(`proxy2.{{ tertiary_domain }}`)
+      traefik.http.routers.api.rule: Host(`proxy.{{ tertiary_domain }}`)
       traefik.http.routers.api.entrypoints: https
       traefik.http.routers.api.tls.certresolver: default
       traefik.http.routers.api.service: api@internal
