--- a/inventory.yml
+++ b/inventory.yml
@@ -1,48 +1,22 @@
 ---
 all:
+  hosts:
+    web01:
+      app_root: /opt
+    offsite01:
+    # ixion:
+    cepheus:
+      app_root: /nvme01/app
   children:
-    vm:
-      hosts:
-        apps:
-        dmz-apps:
-        jj:
-        app01:
     docker:
       hosts:
         cepheus:
-        apps:
-        dmz-apps:
         web01:
           ansible_host: "{{ tertiary_domain }}"
-        web02:
-          ansible_host: "dashy-demo.{{ quaternary_domain }}"
-        app01:
-    docker_rootless:
-    nfs_clients:
-      hosts:
-        apps:
-        dmz-apps:
-        app01:
     workstations:
       hosts:
-        titania:
-        ixion:
-    hypervisors:
-      hosts:
-        lyra:
-    v3:
-      hosts:
-        lyra:
-          app_root: /nvme/enc/app
-        app01:
-          app_root: /nvme/enc/app
-        web01:
-          app_root: /opt
-        offsite01:
-        web02:
-        ixion:
-        cepheus:
-          app_root: /nvme01/app
+        # ixion:
+
   vars:
     ansible_python_interpreter: auto_silent
     ansible_user: ansible
