--- a/templates/web01/compose/auth.yml
+++ b/templates/web01/compose/auth.yml
@@ -20,13 +20,6 @@ services:
       # - UID=####
       # - GID=####
       TZ: {{ timezone }}
-      # If using LDAPS, set enabled true and configure cert and key path
-      # - LLDAP_LDAPS_OPTIONS__ENABLED=true
-      # - LLDAP_LDAPS_OPTIONS__CERT_FILE=/path/to/certfile.crt
-      # - LLDAP_LDAPS_OPTIONS__KEY_FILE=/path/to/keyfile.key
-      # You can also set a different database:
-      # - LLDAP_DATABASE_URL=mysql://mysql-user:password@mysql-server/my-database
-      # - LLDAP_DATABASE_URL=postgres://postgres-user:password@postgres-server/my-database
 
     volumes:
       - "{{ app_root }}/lldap:/data"
@@ -52,13 +45,13 @@ services:
       redis:
 
     environment:
-      AUTHELIA_JWT_SECRET_FILE: /secrets/jwt_secret
+      # AUTHELIA_JWT_SECRET_FILE: /secrets/jwt_secret
       AUTHELIA_SESSION_SECRET_FILE: /secrets/session_secret
       AUTHELIA_STORAGE_ENCRYPTION_KEY_FILE: /secrets/storage_key
       AUTHELIA_NOTIFIER_SMTP_PASSWORD_FILE: /secrets/smtp_pass
       AUTHELIA_AUTHENTICATION_BACKEND_LDAP_PASSWORD_FILE: /secrets/ldap_pass
       AUTHELIA_IDENTITY_PROVIDERS_OIDC_ISSUER_PRIVATE_KEY_FILE: /secrets/oidc_key
-      AUTHELIA_IDENTITY_PROVIDERS_OIDC_HMAC_SECRET_FILE: /secrets/oidc_hmac_secret
+      # AUTHELIA_IDENTITY_PROVIDERS_OIDC_HMAC_SECRET_FILE: /secrets/oidc_hmac_secret
 
     volumes:
       - "{{ app_root }}/authelia/config:/config"
